--- a/src/AdminApp/AdminApp.csproj
+++ b/src/AdminApp/AdminApp.csproj
@@ -27,9 +27,9 @@
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
     <PackageReference Include="NET.efilnukefesin.Extensions" Version="1.7.0-beta" />
     <PackageReference Include="NET.efilnukefesin.Extensions.Wpf.Commands" Version="1.1.1" />
-    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.4.1" />
+    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.5.1-beta" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.1" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="1.0.1-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="1.0.1-beta" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
   </ItemGroup>
 
