--- a/src/PermissionServer.Client/PermissionServer.Client.csproj
+++ b/src/PermissionServer.Client/PermissionServer.Client.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Base" Version="1.9.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.4.0-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0-beta" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
   </ItemGroup>
 
