--- a/src/PermissionServer.Core/PermissionServer.Core.csproj
+++ b/src/PermissionServer.Core/PermissionServer.Core.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
     <PackageReference Include="NET.efilnukefesin.Extensions" Version="1.7.0-beta" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
-    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.4.0-alpha" />
+    <PackageReference Include="NET.efilnukefesin.Contracts.Services.DataService" Version="1.5.0-beta" />
   </ItemGroup>
 
   <ItemGroup>
