--- a/src/SuperHotOtherFeatureServer/SuperHotOtherFeatureServer.csproj
+++ b/src/SuperHotOtherFeatureServer/SuperHotOtherFeatureServer.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc2" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Rest.Server" Version="0.2.0-alpha" />
   </ItemGroup>
 
   <ItemGroup>
