--- a/src/WPF.Shared/WPF.Shared.csproj
+++ b/src/WPF.Shared/WPF.Shared.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.1" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
-    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.4.1" />
+    <PackageReference Include="NET.efilnukefesin.Helpers" Version="1.5.1-beta" />
   </ItemGroup>
 
   <ItemGroup>
