--- a/test/Integration.PermissionServerTests/Integration.PermissionServerTests.csproj
+++ b/test/Integration.PermissionServerTests/Integration.PermissionServerTests.csproj
@@ -7,18 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="PermissionServer.SDKTests.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="PermissionServer.SDKTests.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="NET.efilnukefesin.BaseClasses.Test.Http" Version="0.5.0-alpha" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\BootStrapper\BootStrapper.csproj" />
+    <ProjectReference Include="..\..\src\PermissionServer.SDK\PermissionServer.SDK.csproj" />
+    <ProjectReference Include="..\..\src\PermissionServer\PermissionServer.csproj" />
   </ItemGroup>
 
 </Project>
