--- a/test/Integration.PermissionServerTests/Integration.PermissionServerTests.csproj
+++ b/test/Integration.PermissionServerTests/Integration.PermissionServerTests.csproj
@@ -7,14 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0-beta4" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0-beta4" />
-    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test.Http" Version="0.5.1-alpha" />
+    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test.Http" Version="0.5.2-alpha" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\BootStrapper\BootStrapper.csproj" />
+    <ProjectReference Include="..\..\src\IdentityServer\IdentityServer.csproj" />
     <ProjectReference Include="..\..\src\PermissionServer.SDK\PermissionServer.SDK.csproj" />
     <ProjectReference Include="..\..\src\PermissionServer\PermissionServer.csproj" />
   </ItemGroup>
