--- a/src/IdentityServer/appsettings.json
+++ b/src/IdentityServer/appsettings.json
@@ -92,6 +92,12 @@
       "AllowedGrantTypes": [ "password" ],
       "AllowedScopes": [ "openid", "profile", "api1" ],
 
+      "AllowOfflineAccess": true,
+
+      // very long lifetime, use only for test tokens
+      //"AccessTokenLifetime": 259200000,
+      //"IdentityTokenLifetime": 259200000,
+
       // 511536EF-F270-4058-80CA-1C89C192F69A
       "ClientSecrets": [ { "Value": "fU7fRb+g6YdlniuSqviOLWNkda1M/MuPtH6zNI9inF8=" } ]
     }
