--- a/src/BootStrapper/BootStrapper.csproj
+++ b/src/BootStrapper/BootStrapper.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="NET.efilnukefesin.Implementations.DependencyInjection" Version="1.6.3-alpha" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2-alpha" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Logger.SerilogLogger" Version="1.2.0" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.5-alpha" />
     <PackageReference Include="NET.efilnukefesin.Implementations.FeatureToggling" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview7.19362.4" /> 
   </ItemGroup>
