--- a/src/ClientApp/ClientApp.csproj
+++ b/src/ClientApp/ClientApp.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Expression.Blend.Sdk.WPF" Version="1.0.1" />
     <PackageReference Include="NET.efilnukefesin.Contracts.Logger" Version="1.2.0" />
     <PackageReference Include="NET.efilnukefesin.Extensions.Wpf.Commands" Version="1.1.1" />
-    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.1" />
+    <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm" Version="1.3.5-alpha" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Mvvm.WPF" Version="1.0.1-beta" />
   </ItemGroup>
