--- a/test/Integration.PermissionServerTests/Integration.PermissionServerTests.csproj
+++ b/test/Integration.PermissionServerTests/Integration.PermissionServerTests.csproj
@@ -8,10 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.0.0-preview9.19424.4" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0-preview-20190828-03" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test.Http" Version="0.7.2" />
+    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test.Http" Version="0.7.5-beta" />
   </ItemGroup>
 
   <ItemGroup>
