--- a/test/PermissionServer.CoreTests/PermissionServer.CoreTests.csproj
+++ b/test/PermissionServer.CoreTests/PermissionServer.CoreTests.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0-preview-20190828-03" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.0" />
+    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.2-beta" />
     <PackageReference Include="NET.efilnukefesin.Implementations.Base" Version="1.9.2" />
   </ItemGroup>
 
