--- a/test/WPF.SharedTests/WPF.SharedTests.csproj
+++ b/test/WPF.SharedTests/WPF.SharedTests.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0-preview-20190828-03" />
     <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.0" />
+    <PackageReference Include="NET.efilnukefesin.BaseClasses.Test" Version="1.1.2-beta" />
   </ItemGroup>
 
   <ItemGroup>
